--- a/AuthenticationDemo/AuthenticationDemo.entitlements
+++ b/AuthenticationDemo/AuthenticationDemo.entitlements
@@ -4,8 +4,8 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>authenticationdemo-f852f.firebaseapp.com</string>
-		<string>authenticationdemo-f852f.web.app</string>
+		<string>applinks:authenticationdemo-f852f.web.app?mode=developer</string>
+		<string>webcredentials:authenticationdemo-f852f.web.app?mode=developer</string>
 	</array>
 </dict>
 </plist>
